<resources>
    <string name="app_name">gymify</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="gyms">Gyms</string>
    <string name="workouts">Workouts</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_workout">Add Workout</string>
    <string name="new_workout">New Workout</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="add">add</string>
    <string name="delete">delete</string>
    <string name="title_activity_add_workout">add_workout</string>
    <string name="title_activity_workout_detail">workout_detail</string>
    <string name="date">Date</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="save">Save</string>
    <string name="workout">Workout</string>
    <string name="title_activity_addwork">addwork</string>
    <string name="title_activity_navactivity">navactivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="instructors">Instructors</string>
    <string name="title_activity_instructors">instructors</string>
    <string name="speciality">Speciality</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="images">Image</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="reg">Register</string>
    <string name="pas">Password</string>
    <string name="mail">Email</string>
</resources>
