<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pic"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:contentDescription="@string/images"
        android:src="@drawable/avatar2"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/pic"
        android:id="@+id/textname"
        android:textColor="@color/colorPrimary"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/name"
        android:textSize="20dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:text="@string/email"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:layout_toRightOf="@id/pic"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@+id/textname"
        android:drawableTint="@color/colorPrimary"
        android:id="@+id/textemail"
        android:textSize="16dp"
        android:textStyle="italic"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:text="@string/phone"
        android:drawableLeft="@drawable/ic_phone_iphone_black_24dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_toRightOf="@id/pic"
        android:layout_below="@+id/textemail"
        android:drawableTint="@color/colorPrimary"
        android:id="@+id/textphone"
        android:textSize="16dp"
        android:textStyle="italic"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:text="@string/speciality"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_toRightOf="@id/pic"
        android:layout_below="@+id/textphone"
        android:drawableLeft="@drawable/ic_star_black_24dp"
        android:drawableTint="@color/colorPrimary"
        android:id="@+id/textspecs"
        android:textSize="16dp"
        android:textStyle="italic"
        />

</RelativeLayout>