<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameworkout"
            android:drawableLeft="@drawable/ic_accessibility_black_24dp"
            android:drawableStart="@drawable/ic_accessibility_black_24dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignParentTop="true"
            android:textColor="@color/grey"
            android:text="@string/workout"
            android:textSize="16sp"
            android:textStyle="bold"
            />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/namesets"
        android:textStyle="italic"
        android:text="@string/sets"
        android:drawableLeft="@drawable/ic_format_list_bulleted_black_24dp"
        android:drawableStart="@drawable/ic_format_list_bulleted_black_24dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorPrimary"
        android:layout_below="@id/nameworkout"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/namereps"
            android:textStyle="italic"
            android:text="@string/reps"
            android:textColor="@color/colorPrimary"
            android:drawableLeft="@drawable/ic_repeat_black_24dp"
            android:drawableStart="@drawable/ic_repeat_black_24dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_below="@id/nameworkout"
            android:layout_toRightOf="@id/namesets"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameworkout"
            android:drawableLeft="@drawable/ic_date_range_black_24dp"
            android:drawableStart="@drawable/ic_date_range_black_24dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_alignParentRight="true"
            android:text="@string/date"
            android:textStyle="normal"
            android:layout_alignParentEnd="true"
            android:id="@+id/namedate"
            android:textColor="@color/colorPrimary"
            />

</RelativeLayout>
