<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/MyHintText">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nameworkout"
                android:singleLine="true"
                android:inputType="text"
                android:drawableLeft="@drawable/ic_accessibility_black_24dp"
                android:drawableStart="@drawable/ic_accessibility_black_24dp"
                android:hint="@string/workout"
                android:theme="@style/MyEditText"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name2Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/MyHintText">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/date"
                android:singleLine="true"
                android:inputType="date"
                android:hint="@string/date"
                android:drawableLeft="@drawable/ic_date_range_black_24dp"
                android:drawableStart="@drawable/ic_date_range_black_24dp"
                android:theme="@style/MyEditText"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name3Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/MyHintText">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/set"
                android:inputType="number"
                android:hint="@string/sets"
                android:singleLine="true"
                android:theme="@style/MyEditText"
                android:drawableLeft="@drawable/ic_format_list_bulleted_black_24dp"
                android:drawableStart="@drawable/ic_format_list_bulleted_black_24dp"
                />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/name4Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/MyHintText">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reps"
                android:drawableLeft="@drawable/ic_repeat_black_24dp"
                android:drawableStart="@drawable/ic_repeat_black_24dp"
                android:inputType="number"
                android:singleLine="true"
                android:hint="@string/reps"
                android:theme="@style/MyEditText"/>

        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/saveBtn"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/save"
            android:clickable="true"
            android:background="@drawable/button"
            android:layout_marginTop="40dp"
            android:textColor="@color/white"
            android:focusable="true" />

    </LinearLayout>
</LinearLayout>




